# cs3530

./: .gitignore  .gitmodules  README.md
lecture-notes/2023-09-13/: lecnotes_macros.sty  lecture.tex
netvis/: README.md  graph.html  index.html  inner_legend.html  legends.csv  pyproject.toml
netvis/data/: ips.txt  urls.txt
netvis/data/legends/: legends.csv
netvis/data/logs/: mtr_10.5.80.104.txt  mtr_172.31.49.238.txt  mtr_172.31.49.238_1.txt  mtr_192.168.0.103.txt  mtr_192.168.1.38.txt  mtr_192.168.198.209.txt  mtr_192.168.43.105.txt
netvis/data/netgraphs/: netgraph_10.5.80.104.xlsx  netgraph_172.31.49.238.xlsx  netgraph_172.31.49.238_1.xlsx  netgraph_192.168.0.103.xlsx  netgraph_192.168.1.38.xlsx  netgraph_192.168.198.209.xlsx  netgraph_192.168.43.105.xlsx
netvis/report/: main.tex
netvis/server/: app.py
netvis/server/static/: graph.html
netvis/server/static/styles/: style.css
netvis/server/templates/: index.html
netvis/src/netvis/: NetGraph.py  __about__.py  __init__.py  load.py
netvis/static/: graph.html
netvis/styles/: style.css
netvis/templates/: index.html
netvis/tests/: __init__.py  data_collector.py  dest_gen.py  netgraph_test.py  visualize.py
